--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
-ul li{
-  list-style-type: armenian;
+.App {
+  display: grid;
+  grid-template-areas: "header header"
+                       "login main"
+                       "navbar main";
+  grid-gap: 5px;
+  width:65%;
+  margin:0 auto;
+  grid-template-columns: 2fr 8fr;
+  grid-template-rows: 1fr 3fr 10fr;
 }
+
+
