Add folder with images

--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -6,7 +6,7 @@
 }
 
 .main .bgPhoto{
-    background-image: url("https://bigpicture.ru/wp-content/uploads/2013/03/Panorama02.jpg");
+    background-image: url("https://cameralabs.org/media/camera/may/23may2/33_a55f4eb12c2b31d701660b04422df33d.jpg");
     background-size: cover;
 }
 
