--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   width:65%;
   margin:0 auto;
   grid-template-columns: 2fr 9fr;
-  grid-template-rows: 1fr 3fr 10fr;
+  grid-template-rows: 70px 200px 1fr;
 }
 
 
