--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,23 +1,24 @@
 .main{
     grid-area: main;
     display: grid;
-    grid-template-rows: 3fr 10fr;
     grid-gap: 5px;
 }
 
 .main .bgPhoto{
     background-image: url("https://cameralabs.org/media/camera/may/23may2/33_a55f4eb12c2b31d701660b04422df33d.jpg");
     background-size: cover;
+    height: 200px;
 }
 
 .main .contentBlock{
     background-color: #d7d7d7;
     display: grid;
-    grid-template: 1fr 1fr/1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
     padding: 50px 20px 20px;
 
 }
 .main .contentBlock .contentItem{
     border: 1px solid #979797;
+    min-height: 200px;
 }
