Added component PhotoBG and refactor component Main

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: grid;
   grid-template-areas: "header header"
-                       "login mainBlockWrap"
+                       "login photoBG"
                        "navbar mainBlockWrap";
   grid-gap: 5px;
   width:65%;
