--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .App {
   display: grid;
   grid-template-areas: "header header"
-                       "login photoBG"
+                       "login mainBlockWrap"
                        "navbar mainBlockWrap";
   grid-gap: 5px;
   width:65%;
   margin:0 auto;
   grid-template-columns: 2fr 9fr;
-  grid-template-rows: 80px 200px 1fr;
+  grid-template-rows: 80px 250px 1fr;
 }
 
 .mainBlockWrap {
