--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,3 +1,8 @@
+.main{
+    display: grid;
+    grid-template-rows: 250px 1fr;
+    grid-gap: 5px;
+}
 
 .main .contentBlock{
     background-color: #d7d7d7;
