--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,7 +2,7 @@
     grid-area: navbar;
     display: grid;
     align-content: start;
-    padding-top: 30px;
+    padding: 30px 0;
     background-color: #D7D7D7;
 }
 
