--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -3,12 +3,13 @@
     background-color: #d7d7d7;
     display: grid;
     grid-template-rows: 1fr;
+    justify-content: center;
 }
 
 .login .loginForm{
     display: grid;
+    justify-items: center;
     grid-template-rows: 2fr 2fr 2fr 2fr 1fr;
-    justify-content: center;
     align-content: space-evenly;
 }
 
@@ -21,10 +22,12 @@
 
 .login .loginForm .inputs{
     height: 25px;
+    width: 85%;
 }
 
 .login .loginForm .submitBtn{
     height: 31px;
+    width: 85%;
     background-color: #68A3FF;
     border: none;
 }
