--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
     display: grid;
     align-content: start;
     padding: 30px 0;
-    background-color: #D7D7D7;
+    background-color: #ffffff;
 }
 
 
