--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,6 +1,6 @@
 .login{
     grid-area: login;
-    background-color: #d7d7d7;
+    background-color: #ffffff;
     display: grid;
     grid-template-rows: 1fr;
     justify-content: center;
@@ -18,6 +18,7 @@
     justify-content: center;
     align-content: start;
     padding-top: 10px;
+    color: #515365;
 }
 
 .login .loginForm .inputs{
@@ -27,8 +28,9 @@
 
 .login .loginForm .submitBtn{
     height: 31px;
+    color: #ffffff;
     width: 85%;
-    background-color: #68A3FF;
+    background-color: #3F4257;
     border: none;
 }
 
