--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,11 +1,11 @@
 .main{
     display: grid;
     grid-template-rows: 250px 1fr;
-    grid-gap: 5px;
+    grid-gap: 10px;
 }
 
 .main .contentBlock{
-    background-color: #d7d7d7;
+    background-color: #ffffff;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
