Made logic addition of new post on profile Page

--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -2,3 +2,10 @@
     display: grid;
     grid-gap: 10px;
 }
+
+.myPosts .postWrap{
+    max-height: 800px;
+    overflow: auto;
+    display: grid;
+    grid-gap: 10px;
+}
