--- a/src/components/Profile/MyPosts/PostCreate/PostCreate.module.css
+++ b/src/components/Profile/MyPosts/PostCreate/PostCreate.module.css
@@ -8,22 +8,23 @@
     justify-content: center;
     align-content: center;
     border-radius: 5px;
-    padding: 10px 50px 10px 10px;
+    padding: 10px 25px 10px 25px;
 }
 
 .postCreate .avatar{
     grid-area: ava;
-    justify-self: end;
+    justify-self: start;
     align-self: center;
     width: 50px;
     border-radius: 25px;
+    margin-right: 20px;
 }
 
 .postCreate .textarea{
     grid-area: txt;
     justify-self: end;
     align-self: center;
-    width:95%;
+    width:100%;
     height:50px;
     border: 1px #cec9d1 solid;
     border-radius: 5px;
