--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@
                        "login mainBlockWrap"
                        "navbar mainBlockWrap";
   grid-gap: 10px;
-  width:70%;
+  width:65%;
   margin:0 auto;
-  grid-template-columns: 2fr 9fr;
+  grid-template-columns: 220px 1fr;
   grid-template-rows: 80px 250px 1fr;
 }
 
