--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -4,33 +4,59 @@
     display: grid;
     grid-template-rows: 1fr;
     justify-content: center;
+    justify-items: center;
 }
 
-.login .loginForm{
+.login .loginForm,
+.login .loginAuth{
     display: grid;
     justify-items: center;
     grid-template-rows: 2fr 2fr 2fr 2fr 1fr;
     align-content: space-evenly;
+    /*width:85%;*/
 }
 
-.login .loginForm .formHeader{
+.login .loginAuth{
+    grid-template-rows: 4fr 1fr 1fr 1fr ;
+    align-items: center;
+}
+
+.login .header{
     display: grid;
     justify-content: center;
-    align-content: start;
-    padding-top: 10px;
+    align-content: center;
+    /*padding-top: 10px;*/
     color: #515365;
+    width: 100%;
+
 }
 
 .login .loginForm .inputs{
     height: 25px;
-    width: 85%;
 }
 
-.login .loginForm .submitBtn{
+.login .loginForm .submitBtn,
+.login .loginAuth .editProfile{
+    align-content: center;
     height: 31px;
     color: #ffffff;
-    width: 85%;
     background-color: #3F4257;
     border: none;
+    width: 100%;
 }
+
+.login .loginAuth .editProfile{
+    align-self: start;
+}
+
+.login .loginAuth .exit{
+    justify-self: end;
+    color: #8689A6;
+}
+
+.login .loginAuth .editProfile:hover,
+.login .loginAuth .exit:hover{
+    cursor:pointer
+}
+
 
