--- a/src/components/Users/UserItem/UserItem.module.css
+++ b/src/components/Users/UserItem/UserItem.module.css
@@ -7,6 +7,14 @@
     grid-gap: 20px;
 }
 
+.userItem .userProfileLink {
+    text-decoration: none;
+}
+
+.userItem .userProfileLink:hover {
+    cursor: pointer;
+}
+
 .userItem .bgPhoto {
     height: 100%;
     background-size: cover;
