--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,11 @@
                        "login mainBlockWrap"
                        "navbar mainBlockWrap";
   grid-gap: 10px;
-  width:1200px;
+  width:80%;
+    max-width: 1200px;
   margin:0 auto;
   grid-template-columns: 220px 1fr;
-  grid-template-rows: 80px 250px 1fr;
+  grid-template-rows: 70px 250px 1fr;
 }
 
 .mainBlockWrap {
