--- a/src/components/Login/LoginForm/LoginForm.module.css
+++ b/src/components/Login/LoginForm/LoginForm.module.css
@@ -13,7 +13,7 @@
     display: grid;
     justify-content: center;
     justify-items: center;
-    grid-template-rows: 2fr 2fr 2fr 3fr;
+    grid-template-rows: 3fr 3fr 2fr 2fr;
 }
 
 .loginAuth{
@@ -32,9 +32,9 @@
     width: 100%;
 }
 
-.loginForm .inputs{
-    height: 25px;
-}
+/*.loginForm .inputs{*/
+/*    height: 25px;*/
+/*}*/
 
 .loginForm .rememberMe{
     cursor: pointer;
