--- a/src/components/Login/LoginForm/LoginForm.module.css
+++ b/src/components/Login/LoginForm/LoginForm.module.css
@@ -4,16 +4,22 @@
     display: grid;
 }
 
+.loginWrap .loginFormWrap {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0;
+}
+
 .loginWrap h3{
-  margin: 0;
+  margin: 0 0 10px;
 }
 
 .loginForm {
     height: 100%;
-    display: grid;
-    justify-content: center;
-    justify-items: center;
-    grid-template-rows: 3fr 3fr 2fr 2fr;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .loginAuth{
@@ -31,10 +37,6 @@
     color: #515365;
     width: 100%;
 }
-
-/*.loginForm .inputs{*/
-/*    height: 25px;*/
-/*}*/
 
 .loginForm .rememberMe{
     cursor: pointer;
