Made common validation through stopSubmit()

--- a/src/components/Login/LoginForm/LoginForm.module.css
+++ b/src/components/Login/LoginForm/LoginForm.module.css
@@ -43,6 +43,10 @@
     justify-self: flex-start;
 }
 
+.loginForm .formError {
+    color: red;
+}
+
 .loginAuth .exit{
     justify-self: end;
     color: #8689A6;
