--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .App {
   display: grid;
-  grid-template-areas: "header header"
-                       "login mainBlockWrap"
-                       "navbar mainBlockWrap";
+  grid-template-areas: "header header header"
+                       "navbar mainBlockWrap friends"
+                       "navbar mainBlockWrap friends";
   grid-gap: 10px;
   width:80%;
-  max-width: 1200px;
+  max-width: 1400px;
   margin:0 auto;
-  grid-template-columns: 220px 1fr;
+  grid-template-columns: 230px 1fr 230px;
   grid-template-rows: 70px 250px 1fr;
 }
 
