--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,7 +2,7 @@
     grid-area: navbar;
     display: grid;
     align-content: start;
-    padding: 30px 0;
+    padding: 45px 0 0 35px;
     background-color: #ffffff;
 }
 
