--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,24 +1,53 @@
 .profileWrap{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 250px 1fr;
-    grid-gap: 30px;
+    grid-template-rows: 300px 1fr;
+    grid-gap: 10px;
 }
 
 .profileWrap .bgWrap {
     position: relative;
+    background-color: #ffffff;
  }
 
 .profileWrap .bgWrap .bgPhoto {
-    height: 100%;
+    height: 75%;
     background-image: url('../../images/bgPhotoProfile.jpg');
     background-size: cover;
+}
+
+.profileWrap .bgWrap .headerProfile{
+    height: 20%;
+    display: grid;
+    grid-template-columns: 300px 3fr;
+    justify-content: space-between;
+    align-items: center;
+    color: #515365;
+    font-weight: bolder;
+}
+
+.profileWrap .bgWrap .headerProfile .status{
+    margin-left: 20px;
+}
+
+.profileWrap .bgWrap .headerProfile .editProfile{
+    justify-self: end;
+}
+
+.profileWrap .bgWrap .headerProfile .name{
+   position: absolute;
+   top:260px;
+   left:calc(50% - 150px);
+   font-size: 18px;
+   font-weight: bolder;
+   width: 300px;
+    text-align: center;
 }
 
 .profileWrap .bgWrap .avatar {
     position: absolute;
     left: calc(50% - 60px);
-    bottom: -10%;
+    bottom: 15%;
     border: 2px #ffffff solid;
     border-radius: 60px;
     width: 120px;
