--- a/src/components/Dialogs/Messages/MessageItem/MessageItem.module.css
+++ b/src/components/Dialogs/Messages/MessageItem/MessageItem.module.css
@@ -1,19 +1,18 @@
 .messageBlock{
     display: grid;
-    grid-template-columns: 1fr 6fr;
-    padding: 20px;
+    grid-template-columns: 70px 6fr;
+    padding: 15px;
 }
 
 .messageBlock .avatar{
     width: 50px;
-    height: 50px;
-    border-radius: 25px;
+    margin-right: 20px;
 }
 
 .messageBlock .message{
     background-color: #EDF2F6;
     border-radius: 5px;
-    padding: 5px 10px 10px;
+    padding: 5px 15px 10px;
 }
 
 .messageBlock .message .messageHeader{
@@ -36,7 +35,7 @@
 }
 
 .messageBlock .message .messageContent{
-    padding-top: 10px;
+    padding: 5px 5px 10px;
     color: #A9ACC0;
 }
 
