--- a/src/components/Friends/Friends.module.css
+++ b/src/components/Friends/Friends.module.css
@@ -7,7 +7,9 @@
 
 .interlocutorsBlock .interlocutorsHeader{
     border-bottom: 1px #cec9d1 solid;
-    padding: 10px;
+    padding: 15px;
+    color: #515365;
+    font-weight: bolder;
 }
 
 .interlocutorsBlock .interlocutorsHeader span{
