--- a/src/components/Profile/ProfileInfoBlock/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfoBlock/ProfileInfo/ProfileInfo.module.css
@@ -10,11 +10,12 @@
 .profileInfo .editWrap{
     justify-self: end;
     cursor: pointer;
-    margin-right: 20px;
+    margin: 5px 20px 0 0;
+    font-size: 14px;
 }
 
 .profileInfo .editWrap .editMode{
-    font-size: 14px;
+    font-size: 11px;
 }
 
 .profileInfo .contact{
