--- a/src/components/Profile/ProfileInfoBlock/ProfileData/ProfileData.module.css
+++ b/src/components/Profile/ProfileInfoBlock/ProfileData/ProfileData.module.css
@@ -1,4 +1,4 @@
-.profileInfo{
+.profileData{
     display: grid;
     grid-template-columns: 1fr;
     border-radius: 5px;
@@ -7,18 +7,18 @@
     padding-top: 10px;
 }
 
-.profileInfo .editWrap{
+.profileData .editWrap{
     justify-self: end;
     cursor: pointer;
     margin: 5px 20px 0 0;
     font-size: 14px;
 }
 
-.profileInfo .editWrap .editMode{
+.profileData .editWrap .editMode{
     font-size: 11px;
 }
 
-.profileInfo .contact{
+.profileData .contact{
     padding: 5px 0 0 10px;
     color: #515365;
 }
